@@ -1,0 +1,16 @@
+server:
+	verbosity: 4
+	# num-threads: 1
+	interface: 127.0.0.1
+	port: @PORT@
+	use-syslog: no
+	directory: .
+	pidfile: "unbound.pid"
+	chroot: ""
+	username: ""
+	do-not-query-localhost: no
+
+stub-zone:
+	name: "example.com"
+	stub-addr: "127.0.0.1@@TOPORT@"
+
